XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Exception__e.object
<CustomObject>
    <fields>
        <fullName>CRMfusionDBR101__Exception__c</fullName>
        <label>Exception</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Method__c</fullName>
        <description>Full name of the method where the exception occured.</description>
        <label>Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Record_Ids__c</fullName>
        <description>Triggering record ids, if any.</description>
        <label>Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Trigger_Type__c</fullName>
        <description>Trigger type - update, insert, delete, undelete or n/a if not a trigger</description>
        <label>Trigger Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>